# Eris

./: API_DOCUMENTATION.md  Cargo.toml
benches/: batch_size_bench.rs
burnme-rly/: Cargo.toml  README.md
burnme-rly/benches/: batch_size_sweep.rs  rl_comparison.rs  training_comparison.rs
burnme-rly/src/: buffer.rs  checkpoint.rs  coordinator.rs  diagnostics.rs  env.rs  lib.rs  prefetch.rs  space.rs  traits.rs  warmup.rs
burnme-rly/src/loss/: mod.rs
burnme-rly/src/models/: combined.rs  composable.rs  metis_v2.rs  metis_v2_model.rs  mod.rs  ppo_model.rs
burnme-rly/src/models/optimus/: bridge.rs  config.rs  mod.rs  model.rs  policy.rs  utils.rs
burnme-rly/src/trainers/: base.rs  dqn_trainer.rs  metis_trainer.rs  mod.rs  ppo_trainer.rs
config/: bandit_example.toml  comparison_example.toml  dqn_example.toml  extended.toml  final_new.toml  minimal_new.toml  test_comments.toml  test_new.toml  tiers.toml  tiers_fixed.toml  tiers_new.toml  tiers_new_v2.toml
docs/: API.md  ARCHITECTURE.md  BURN_BACKENDS.md  BURN_RL_DECISION.md  DATA_FORMATS.md  DEVELOPMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v1.md  MODELS_IMPLEMENTATION.md  MODEL_ARCHITECTURE.md  PERFORMANCE.md  README.md  REFACTOR_SUMMARY.md  TESTING.md  TRAINING_GUIDE.md  architecture.md  batch_size_guide.md  cpu_sync_elimination.md  dataloader_tuning.md
examples/: EXAMPLES_README.md  compare_policies.sh  dqn_inference.rs  train_bandit.sh  train_dqn.sh
src/: config_old.rs  device.rs  env.rs  error.rs  lib.rs  model.rs  models.rs  profiling.rs  training.rs
src/config/: bandit_config.rs  batch_tuner.rs  combined_config.rs  dqn_config.rs  mod.rs  training_config.rs
src/env/: io_buffer_env.rs  mod.rs  trait.rs  vec_env.rs
src/features/: extractor.rs  hotness.rs  mod.rs  tracker.rs
src/models/: bandit.rs  combined.rs  compose_adapter.rs  dqn.rs  mod.rs
src/policies/: bandit_policy.rs  cacheus.rs  catcher.rs  checkpoint.rs  dqn_policy.rs  exploration.rs  metis.rs  mod.rs  policy.rs  td_loss.rs  tensor_utils.rs  tensor_utils.rs.rej
src/rl/: mod.rs  policy.rs  types.rs
src/space/: box_space.rs  discrete_space.rs  mod.rs
src/tier/: manager.rs  mod.rs  selector.rs  tier.rs
src/trace/: blob.rs  dftracer.rs  mod.rs  reader.rs
src/trainers/: base.rs  mod.rs
src/training/: BURN_INTEGRATION.md  batched_action_utils.rs  burn_callbacks.rs  burn_dataloader.rs  burn_metrics.rs  burn_policy.rs  burn_trainer.rs  checkpoint.rs  coordinator.rs  gpu_coordinator.rs  gpu_trainable.rs  hybrid_buffer.rs  mock_env.rs  mod.rs  monitor.rs  prefetch.rs  replay_buffer.rs  ring_buffer.rs  tensor_buffer.rs  trainer.rs  transition_batcher.rs
src/utils/: backend_diagnostics.rs  macros.rs  mod.rs  timing.rs
tests/: burnme_rly_integration.rs  test_bandit_policy.rs  test_checkpoint_save.rs  test_dimension_alignment.rs  test_dqn_policy.rs  test_exploration.rs  test_features.rs  test_models.rs  test_policy_integration.rs  test_tier.rs  test_trace.rs  test_training.rs
