[package]
name = "eris"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Backend features (mutually exclusive - choose ONE)
# CPU backend (no GPU)
cpu-only = ["burn/ndarray", "burn/autodiff", "burn/train", "burn/dataset"]
# GPU backends
wgpu-only = ["burn/wgpu", "burn/autodiff", "burn/train", "burn/dataset"]
cuda-only = ["burn/cuda", "burn/autodiff", "burn/train", "burn/dataset"]
rocm-only = ["burn/rocm", "burn/autodiff", "burn/train", "burn/dataset"]

[dependencies]
postcard = { version = "1.1", features = ["alloc", "use-crc"] }
burn = { version = "0.20", default-features = false }
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
csv = "1.4.0"
gymnasia = "2.0.0"
hashbrown = "0.16.1"
indicatif = "0.18"
log = "0.4"
memmap2 = "0.9.10"
rand = "0.10.0"
rand_pcg = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
toml = "1.1"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"
proptest = "1.11.0"
tempfile = "3.20"

