[workspace]
members = ["burnme-rly", "."]
resolver = "2"

[package]
name = "eris"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = ["wgpu", "parallel", "spirv"]
# Backend features (mutually exclusive - choose ONE)
# CPU backend (no GPU)
cpu = ["burn/ndarray", "burn/train", "burn/dataset"]
# GPU backends
wgpu = [
  "burn/wgpu",
  "burn/autodiff",
  "burn/train",
  "burn/dataset",
  "burn/fusion",
]
cuda = [
  "burn/cuda",
  "burn/autodiff",
  "burn/train",
  "burn/dataset",
  "burn/fusion",
]
rocm = [
  "burn/rocm",
  "burn/autodiff",
  "burn/train",
  "burn/dataset",
  "burn/fusion",
]

# Profiling feature (requires Tracy server running)
profiling = ["tracy-client"]

# Parallel environment stepping
parallel = ["rayon"]

# SPIR-V support for wgpu (Vulkan targets with better performance)
spirv = ["wgpu", "burn/ir"]

[dependencies]
burnme-rly = { path = "burnme-rly" }
postcard = { version = "1.1", features = ["alloc", "use-crc"] }
burn = { version = "0.20", default-features = false }
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1"
gymnasia = "3.0.0"
hashbrown = "0.17.0"
indicatif = "0.18"
log = "0.4"
memmap2 = "0.9.10"
rand = "0.10.0"
rand_pcg = "0.10.0"
rand_distr = "0.6.0"
rayon = { version = "1.11", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
derive_builder = "0.20"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracy-client = { version = "0.18", optional = true }
toml = "1.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"
proptest = "1.11.0"
tempfile = "3.20"
