[package]
name = "burnme-rly"
version = "0.1.0"
edition = "2021"
description = "Optimized GPU training pipeline for Burn-based reinforcement learning"
license = "GPL-3.0"

[dependencies]
burn = { version = "0.20", default-features = false }
log = "0.4"
env_logger = "0.11"
rand = "0.10"
# thiserror removed - not used
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Optional dependencies for optimus feature
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
itransformer = { version = "2.0", optional = true }
either = { version = "1.13", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["wgpu", "cpu"]
cuda = ["burn/cuda", "burn/autodiff", "burn/train"]
rocm = ["burn/rocm", "burn/autodiff", "burn/train"]
wgpu = ["burn/wgpu", "burn/autodiff", "burn/train"]
cpu = ["burn/ndarray", "burn/train"]
spirv = ["wgpu", "burn/ir"]
optimus = ["candle-core", "candle-nn", "itransformer", "either", "toml"]

[dev-dependencies]
burn = { version = "0.20", features = ["ndarray", "autodiff"] }
criterion = "0.8"

[[bench]]
name = "training_comparison"
harness = false
required-features = ["cuda"]

[[bench]]
name = "rl_comparison"
harness = false

[[bench]]
name = "batch_size_sweep"
harness = false
